force-app/main/default/objects/CommercientSF6__OrdLin__c/CommercientSF6__OrdLin__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line Custom Forms</label>
    <nameField>
        <label>Sales Order Line Custom Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line Custom Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>