force-app/main/default/objects/CommercientSF6__OrdLin__c/fields/CommercientSF6__FieldName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__FieldName__c</fullName>
    <label>FieldName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>