force-app/main/default/objects/CommercientSF6__OrdLin__c/fields/CommercientSF6__Syspro_Sales_Order_Detail_Line__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Syspro_Sales_Order_Detail_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Order Detail Line</label>
    <referenceTo>CommercientSF__SorDetailRep__c</referenceTo>
    <relationshipName>OrdLin</relationshipName>
    <type>Lookup</type>
</CustomField>